@@ -1,3 +1,12 @@
+2007-01-07  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procman.cpp:
+	* src/smooth_refresh.cpp:
+	* src/smooth_refresh.h:
+
+	Fixed signedness issue with SmoothRefresh.
+	Simplified logic.
+
 2007-01-06  Benoît Dejean  <benoit@placenet.org>
 
 	* src/prettytable.cpp:
